--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
          </form>
      </div>
      <div class="row">
-        <front-end-chart></front-end-chart>
+        <front-end-chart </front-end-chart>
      </div>
   </body>
 </html>
